working process part done and why choseus alignment fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -253,6 +253,9 @@ form {
     align-items:center;
     padding: 30px 40px;
     width: 100%;
+    overflow: hidden;
+        box-sizing: border-box;
+        
     
     .leftpart{
         
@@ -270,7 +273,7 @@ form {
     .rightpart{
         display: flex;
         flex-direction: column;
-        margin-right: 300px;
+        margin-right: 180px;
         .first{
             padding: 0 30px 0px 0px;
         }
@@ -280,8 +283,38 @@ form {
     }
     }
 #workingprocess{
+    background-image: url('../images/workingprocessbackground.png');
     display: flex;
+    justify-content: center;
+    align-items: center;
+    
     .logos{
         display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding: 80px 0px 40px 0px;
     }
+    
+    .logos i {
+        font-size: 40px;
+        margin-bottom: 10px;
+    }
+    
+    .logos p {
+        
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: 16px;
+    
+    }
+    .line {
+        width: 200px; 
+        height: 150px;
+        border:  solid  2px#ccc;
+        border-color: white transparent transparent transparent; 
+        border-radius: 50%/100px 100px 0 0;
+
+    }
+    
 }
